--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "appointment-calendar-angular4",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
+  "main": "app.js",
+  "engines": {
+    "node": "6.10.2",
+    "npm": "3.10.5"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "grant sass:prodaction && ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.0.6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "cool-ascii-faces": "1.3.4",
     "core-js": "^2.4.1",
+    "ejs": "2.5.6",
+    "express": "^4.15.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
