--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "license": "MIT",
   "main": "app.js",
   "engines": {
-    "node": "6.10.2",
-    "npm": "3.10.5"
+    "node": "6.11.1",
+    "npm": "3.10.9"
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --aot -prod",
+    "start": "node server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "1.0.6",
+    "@angular/cli": "1.2.6",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
@@ -31,12 +31,12 @@
     "cool-ascii-faces": "1.3.4",
     "core-js": "^2.4.1",
     "ejs": "2.5.6",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.6",
+    "@angular/cli": "1.2.6",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
