--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "icons": "webpack -w",
     "postinstall": "ng build --aot -prod",
     "start": "node server.js"
   },
@@ -28,10 +29,16 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.3",
     "core-js": "^2.4.1",
     "ejs": "2.5.6",
     "express": "^4.15.3",
+    "ng2-redux": "^5.1.2",
+    "redux": "^3.7.2",
     "rxjs": "^5.1.0",
+    "webpack-spritesmith": "^0.3.3",
+    "webpack-webfont": "0.0.1-alpha.7",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -45,12 +52,15 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
+    "typescript": "~2.2.0",
+    "redux": "^3.7.0",
+    "webpack-spritesmith": "^0.3.3",
+    "webpack-webfont": "0.0.1-alpha.7"
   }
 }
